<resources>
    <string name="app_name">yo</string>
    <string name="settings">Settings</string>

    <string name="menu_channel">Channel</string>
    <string name="menu_channel_summary">The channel to join</string>

    <string name="menu_username">Username</string>
    <string name="menu_username_summary">Twitch username</string>

    <string name="menu_token">Token</string>
    <string name="menu_token_summary">Show/(Edit) OAuth Token</string>

    <string name="menu_chat_read">Read chat</string>
    <string name="menu_chat_read_summary">Join chat as logged in user.</string>

    <string name="menu_chat_edit">Write in chat</string>
    <string name="menu_chat_edit_summary">Send messages to chat as logged in user.</string>

    <string name="menu_channel_moderate">Moderate channel</string>
    <string name="menu_channel_moderate_summary">Access moderation functions in channel.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>