<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.EditTextPreference
        android:defaultValue="m1_1m"
        android:icon="@drawable/ic_twitch_logo"
        android:key="edit_text_preference_channel"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/menu_channel_summary"
        android:title="@string/menu_channel" />

    <androidx.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="check_box_preference_chat_read"
        android:summary="@string/menu_chat_read_summary"
        android:title="@string/menu_chat_read"
        app:enabled="false" />

    <androidx.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="check_box_preference_chat_edit"
        android:summary="@string/menu_chat_edit_summary"
        android:title="@string/menu_chat_edit"
        app:enabled="false" />

    <androidx.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="check_box_preference_channel_moderate"
        android:summary="@string/menu_channel_moderate_summary"
        android:title="@string/menu_channel_moderate"
        app:enabled="false" />

    <androidx.preference.EditTextPreference
        android:defaultValue="justinfan1337"
        android:icon="@drawable/ic_action_user"
        android:key="edit_text_preference_username"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/menu_username_summary"
        android:title="@string/menu_username" />
    <androidx.preference.EditTextPreference
        android:defaultValue=""
        android:icon="@drawable/ic_action_token"
        android:key="edit_text_preference_token"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/menu_token_summary"
        android:title="@string/menu_token"
        app:enabled="false" />
</androidx.preference.PreferenceScreen>